@@ -5,8 +5,14 @@ frostwire (6.10.0) stable; urgency=high
   * Removed audio player playlists along with H2 database dependency
   * Search cache now works with sqlite database
   * MPlayer 1.5.0 with FFmpeg snapshot and OpenSSL 1.1.1s
+  * SoundCloud search fixed
+  * SearchManager now has 2 executors, one for crawlers another for one off requests.
+  * DEV: New SearchPerformer.isDDOSProtectionActive() logic used in unit tests
+  * CI: jdk19 tests
+  * CI: telluride tests do not run in CI
+  * CI: all search performers have tests
 
- -- FrostWire Team <contact@frostwire.com>  Fri, 24 Feb 2023 20:20:00 -0600
+ -- FrostWire Team <contact@frostwire.com>  Sun, 26 Feb 2023 08:34:00 -0600
 
 frostwire (6.9.10) stable; urgency=high
   * Java Runtime Environment 19.0.1
